<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mokytojas.siuvykla.New_post">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post_add_post" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/clothes_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/operation_one_type_of_clothes"
                android:prompt="@string/operation_one_type_of_clothes_name"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/operation_one_gender"
                android:prompt="@string/operation_one_gender_name"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/operation_one_color"
                android:prompt="@string/operation_one_color_name"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/operation_one_delivery"
                android:prompt="@string/operation_one_delivery_name"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/operation_one_order">
            <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/operation_one_price">
                <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/clothes_lenght"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/operation_one_clothes_lenght">
                <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/clothes_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/operation_one_clothes_width">
                <requestFocus />
            </EditText>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/operation_one_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_one_submit_button"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
