<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mokytojas.siuvykla.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/prisijungimo_vardas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_label_username"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/prisijungimo_slaptazodis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_label_password"
                android:inputType="textPassword"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/logino_mygtukas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_label_logIn_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/registracijos_mygtukas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register_button" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
